<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.grupodetec.aventuraprote.View.Home.HomeActivity"
    tools:showIn="@layout/activity_home">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/home_scroll_sites_title"
            android:text="@string/Sites"
            android:gravity="center"
            android:layout_margin="@dimen/linearlayoutpadding"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/cardview_hometitle"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerview_sites"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/home_scroll_food_title"
            android:text="@string/food"
            android:gravity="center"
            android:layout_margin="@dimen/linearlayoutpadding"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/cardview_hometitle"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerview_food"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/home_scroll_hotels_title"
            android:text="@string/hotels"
            android:gravity="center"
            android:layout_margin="@dimen/linearlayoutpadding"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/cardview_hometitle"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerview_hotels"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/home_scroll_adventure_title"
            android:text="@string/adventure"
            android:gravity="center"
            android:layout_margin="@dimen/linearlayoutpadding"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/cardview_hometitle"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerview_adventure"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/home_scroll_night_title"
            android:text="@string/nightlife"
            android:gravity="center"
            android:layout_margin="@dimen/linearlayoutpadding"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/cardview_hometitle"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerview_night"
            />


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
